@@ -1,17 +1,10 @@
 {
-  "timestamp" : "2022-05-18T00:56:50Z",
-  "count_outdated" : 44,
-  "uniques_outdated" : 29,
-  "count" : 97,
-  "uniques" : 62,
+  "timestamp" : "2022-05-19T16:38:18Z",
+  "count_outdated" : 52,
+  "uniques_outdated" : 33,
+  "count" : 98,
+  "uniques" : 63,
   "clones" : [
-    {
-      "timestamp": "2022-05-05T00:00:00Z",
-      "count": 8,
-      "count_minmax": [ 7, 8 ],
-      "uniques": 4,
-      "uniques_minmax": [ 3, 4 ]
-    },
     {
       "timestamp": "2022-05-06T00:00:00Z",
       "count": 7,
@@ -49,6 +42,13 @@
     },
     {
       "timestamp": "2022-05-14T00:00:00Z",
+      "count": 1,
+      "count_minmax": [ 1, 1 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 1 ]
+    },
+    {
+      "timestamp": "2022-05-19T00:00:00Z",
       "count": 1,
       "count_minmax": [ 1, 1 ],
       "uniques": 1,
