@@ -1,12 +1,7 @@
 {
-  "count": 53,
-  "uniques": 17,
+  "count": 46,
+  "uniques": 18,
   "clones": [
-    {
-      "timestamp": "2022-05-05T00:00:00Z",
-      "count": 8,
-      "uniques": 4
-    },
     {
       "timestamp": "2022-05-06T00:00:00Z",
       "count": 7,
@@ -34,6 +29,11 @@
     },
     {
       "timestamp": "2022-05-14T00:00:00Z",
+      "count": 1,
+      "uniques": 1
+    },
+    {
+      "timestamp": "2022-05-19T00:00:00Z",
       "count": 1,
       "uniques": 1
     }
