@@ -1,3 +1,10 @@
+2022-05-19T16:38:18Z:
+* notice: last 14d: unq all: 18 46
+* notice: prev accum: outdated-unq outdated-all / unq all: 29 44 / 62 97
+* notice: next accum: outdated-unq outdated-all / unq all: 33 52 / 63 98
+* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +1 +1 -0 -0 / 1 1
+* notice: changed dates: [2022-05-19]
+
 2022-05-18T00:56:50Z:
 * notice: last 14d: all unq: 53 17
 * notice: prev accum: outdated-all outdated-unq / all unq: 28 18 / 97 62
